2023-08-29  Todd Valentic
    - transportctl. Missing f-string in client list
    - directoryservice. Return info dictionary for list()
    - console. Handle new directory.list() format
    - Release 3.0.18

2023-08-23  Todd Valentic
    - newstool. Create path for last read file if needed
    - Release 3.0.17

2023-08-23  Todd Valentic
    - transport-get-article. Add output directory and uncompress options
    - newstool. Add set_last_read_path to store tracking file location
    - Release 3.0.16

2023-08-23  Todd Valentic
    - Make sure utility programs are linked into bin 
    - Release 3.0.15

2023-08-23  Todd Valentic
    - Update getarticle. Renamed transport-get-article
    - Update postsrticle. Renamed transport-post-article
    - Update rmnewsgroup
    - Update createnewsgroup
    - Release 3.0.14

2023-08-19  Todd Valentic
    - newsposter. Retry on most errors when creating newsgroups
    - Release 3.0.13

2023-08-17  Todd Valentic
    - listnewsgroups. Add port option
    - transportlogger. Clear handlers on creation
    - transportctl. Code cleanup and improved error reporting
    - cancelnewsgroup. PEP8 compliance 
    - console. PEP8 compliance 
    - listnewsgroup. PEP8 compliance 
    - transport-create-app. PEP8 compliance 
    - Release 3.0.12

2023-08-11  Todd Valentic
    - transport-create-app. Make sure to link transportctl to bin
    - NewsgroupMonitor. Fix import to use apps 
    - Release 3.0.11 

2023-08-11  Todd Valentic
    - ProcessGroup. Make sure group.home is in PYTHONPATH
    - NewsTool. Set max header line length 77 -> 150
    - transport-create-app. Link programs to bin
    - viewlog. Increase number of initial lines shown
    - NewsGateway. Updated for transport3 / python3
    - Scheduler. Updated for transport3 / python3
    - PostDadataFiles. Updated for transport3 / python3
    - RealtimeFeed. Updated for transport3 / python3
    - ResourceMonitor. Updated for transport3 / python3